--- a/index.css
+++ b/index.css
@@ -77,16 +77,34 @@ span {
 }
 
 #pantalla {
-  border: solid 3px var(--gris);
   width: 100%;
   border-radius: 30px;
-  padding: 0.5rem;
-  padding-bottom: 1.5rem;
   text-align: center;
   background-color: var(--gris);
   color: rgb(223, 223, 223);
   overflow-x: hidden;
+  min-height: 200px;
+}
 
+.msjCont {
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.msj {
+  margin-bottom: 1rem;
+}
+
+#bienvenida {
+  margin: 0;
+}
+
+.vacio {
+  font-weight: 900;
+  padding: 1rem;
 }
 
 .year {
@@ -96,7 +114,7 @@ span {
   font-size: 1.5rem;
   font-weight: 1000;
   color: var(--gris);
-  margin-top: 1rem;
+  margin: 1rem 0.5rem;
 }
 
 .month {
@@ -109,7 +127,7 @@ span {
   position: relative;
   background-color: #414557;
   border-radius: 5px;
-  margin: 0.5rem 0;
+  margin: 0.5rem 0.5rem;
   color: rgb(223, 223, 223);
   padding: 0.2rem;
 }
@@ -179,6 +197,13 @@ span {
   box-shadow: 0 0 10px goldenrod;
 }
 
+.realizadas {
+  background-color: limegreen;
+  color: white;
+  padding: 1rem;
+  font-weight: 900;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -246,24 +271,38 @@ footer {
   #pantalla {
     width: 60%;
     max-height: calc(100vh - 12rem);
-    overflow-y: auto;
+    overflow-y: hidden;
   }
 
-  #pantalla::-webkit-scrollbar {
+  .tareasCont {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding-bottom: 16px;
+  }
+
+  .realizadasCont {
+    height: calc(100% - 3rem);
+  }
+
+  .tareasCont::-webkit-scrollbar {
     width: 10px;
   }
 
-  #pantalla::-webkit-scrollbar-track {
+  .tareasCont::-webkit-scrollbar-track {
     background: var(--gris);
     border-radius: 7px;
     margin-top: 2rem;
     margin-bottom: 2rem;
   }
 
-  #pantalla::-webkit-scrollbar-thumb {
+  .realizadasCont::-webkit-scrollbar-track {
+    margin-top: 0;
+  }
+
+  .tareasCont::-webkit-scrollbar-thumb {
     background-color: var(--naranja);
     border-radius: 7px;
-    border: 1px solid #c8c8c8;
   }
 
   form input {
