fetch para feriados

--- a/index.css
+++ b/index.css
@@ -86,6 +86,16 @@ span {
   min-height: 200px;
 }
 
+.feriadosCont {
+  background-color: rgb(202, 62, 62);
+  color: #e0e4cc;
+}
+
+.feriadosTitulo {
+  margin: 0;
+  font-size: 1.2rem;
+}
+
 .msjCont {
   height: 200px;
   display: flex;
@@ -199,7 +209,7 @@ span {
 
 .realizadas {
   background-color: limegreen;
-  color: white;
+  color: #e0e4cc;
   padding: 1rem;
   font-weight: 900;
 }
@@ -275,7 +285,7 @@ footer {
   }
 
   .tareasCont {
-    height: 100%;
+    height: 85%;
     overflow-x: hidden;
     overflow-y: auto;
     padding-bottom: 16px;
